More default base URI in forms.
git-svn-id: https://svn.code.sf.net/p/teamengine/code/branches/team2@369 24c30046-25e5-4eec-8353-25991c8b1332